[gd_scene load_steps=4 format=3 uid="uid://6b8wf8s1nsx"]

[ext_resource type="Script" uid="uid://bnq4ltg1gqt6f" path="res://core/wood/wood.gd" id="1_45tpy"]
[ext_resource type="Texture2D" uid="uid://citb0sgiv3rio" path="res://core/icon.svg" id="2_kjvbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fm5dc"]
size = Vector2(43.25, 382.5)

[node name="Wood" type="Node2D"]
script = ExtResource("1_45tpy")
metadata/_edit_horizontal_guides_ = [298.0]

[node name="Up" type="Sprite2D" parent="."]
position = Vector2(20.75, 191.5)
scale = Vector2(0.261719, 2.99219)
texture = ExtResource("2_kjvbb")

[node name="Down" type="Sprite2D" parent="."]
position = Vector2(18.75, 755)
scale = Vector2(0.261719, 2.95313)
texture = ExtResource("2_kjvbb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(21.75, 191)
shape = SubResource("RectangleShape2D_fm5dc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(19.5, 755.25)
shape = SubResource("RectangleShape2D_fm5dc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(20.5, 472)
scale = Vector2(3.05, 48.2)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
